# rust-irexplorer

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md
src/: api.rs  compiler.rs  ir.rs  main.rs
static/: app.js  index.html  style.css
