[package]
name = "irexplorer"
version = "0.1.0"
edition = "2021"
description = "A local web tool for exploring Rust compiler intermediate representations"
license = "MIT"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
